--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "windows-rui",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "main": "dist/index.cjs.js",
   "module": "dist/index.esm.js",
   "types": "dist/types/index.d.ts",
   "files": [
-    "dist",     
+    "dist",
     "README.md",
-    "LICENSE"    
+    "LICENSE"
   ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -20,6 +20,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "normalize.css": "^8.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
@@ -35,6 +36,7 @@
     "@storybook/react-vite": "^8.4.4",
     "@storybook/test": "^8.4.4",
     "@types/storybook__react": "^4.0.2",
+    "nx": "20.1.3",
     "rollup": "^4.26.0",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-postcss": "^4.0.2",
@@ -42,5 +44,6 @@
     "sass": "^1.81.0",
     "storybook": "^8.4.4",
     "typescript": "^5.6.3"
-  }
+  },
+  "nx": {}
 }
